27 flex correction relating to align-i- and justify-c

--- a/Folder.1/01-iceland/styles.css
+++ b/Folder.1/01-iceland/styles.css
@@ -2,7 +2,8 @@ body {
     font-style: normal;
     display: flex;
     flex-direction: column;
-    flex-align: center;
+    justify-content: center;
+    align-items: center;
 }
 
 
